[package]

name = "turbine"
version = "0.0.1"
authors = [ "James Moak <jmoak6@gatech.edu>",
            "Michael Lu <lumichael94@gmail.com>",
            "Paul Park <ppark36@gatech.edu>"]

# [[bin]]
# name = "turbine"
# path = "src/turbo/turbo.rs"


[dependencies]
postgres = "0.10"
rand = "0.3"
rust-crypto = "0.2.31"
secp256k1 = "0.2.4"
rustc-serialize = "0.3"
chrono = "0.2"
docopt = "0.6"
