[package]
name = "turbine"
version = "0.0.1"
authors = [ "James Moak <jmoak6@gatech.edu>",
            "Michael Lu <lumichael94@gmail.com>",
            "Paul Park <ppark36@gatech.edu>"]

[dependencies]
postgres = "0.10.1"
rand = "0.3.11"
rust-crypto = "0.2.34"
secp256k1 = "0.5.1"
rustc-serialize = "0.3.16"
chrono = "0.2.16"
bincode = "0.4.0"
regex = "0.1.41"
